--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="divClass">
-        <h2>Experiencias Laborales</h2>
+        <h2>Work Experience</h2>
         <p>Claims Representative and Loss Adjuster for REDNA Adjusters, Zurich Santander, Chubb México and GMX Seguros</p>
         <h2>Skills</h2>
         <h3>Hard Skills</h3>
